discussion/kv_engine/175151/175151_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51916: Add support for refuse data ingress from clients

Add support for the data plane to tell a bucket that it should
not accept data ingress from a client into a bucket. Once
enabled a client may only retrieve (and delete) documents.

Note that this does _NOT_ affect DCP as we don't want to
end up in a situation where we can't store the requested
amount of replicas.

Change-Id: Ib4de82fde4cea46292c8fc01d56ca9ebe952aff1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-05-23 09:23:17.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-23 10:08:17.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17649/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets_test.cc:18:5: error: static_assert failed due to requirement "sizeof(Bucket) == 6256" "Bucket size changed, the reset test must be updated with the new members" [clang-diagnostic-error]
    static_assert(sizeof(Bucket) == 6256,
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17649/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets_test.cc:18:5:
error: static_assert failed due to requirement "sizeof(Bucket) == 6256" "Bucket size changed, the reset test must be updated with the new members" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17649/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19420/ : FAILURE

Compile error at [2022-05-23T09:48:01.792Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/buckets_test.cc:18:34:
error: static assertion failed: Bucket size changed, the reset test must be updated with the new members
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19420/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27821/ : FAILURE

Compile error at [2022-05-23T09:49:25.184Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/buckets_test.cc:18:5:
error: static_assert failed due to requirement "sizeof(Bucket) == 6256" "Bucket size changed, the reset test must be updated with the new members"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27821/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7260/ : FAILURE

Compile error at [2022-05-23T09:46:15.833Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/buckets_test.cc:18:5:
error: static_assert failed due to requirement "sizeof(Bucket) == 6256" "Bucket size changed, the reset test must be updated with the new members"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7260/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20438/ : FAILURE

Compile error at [2022-05-23T09:47:03.144Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/buckets_test.cc:18:5:
error: static_assert failed due to requirement "sizeof(Bucket) == 6256" "Bucket size changed, the reset test must be updated with the new members"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20438/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19772/ : FAILURE

Compile error at [2022-05-23T09:48:31.033Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/daemon/buckets_test.cc:18:34:
error: static assertion failed: Bucket size changed, the reset test must be updated with the new members
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19772/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16675/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46306/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38911/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18624/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7361/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
